fix icon visibility

--- a/src/app/weather-forecast/weather-forecast.component.scss
+++ b/src/app/weather-forecast/weather-forecast.component.scss
@@ -36,7 +36,10 @@
 
 }
 .icon {
-width: 5.5%;
+  height: 96px;
+  width: 96px;
+  background-size: 96px 96px;
+  overflow: hidden;
 
 }
 
